SWWEB-861 fix grid alignment issue

--- a/softWrench.sW4.Web/Content/styles/default/site.css
+++ b/softWrench.sW4.Web/Content/styles/default/site.css
@@ -184,6 +184,10 @@ body {
     .listgrid-table {
         margin-top: 0px;
     }
+
+    .listgrid-thead {
+        width: 100%;
+    }
 }
 
 @media all and (min-width: 768px) {
@@ -198,7 +202,6 @@ body {
 
     .container.desktop .listgrid-thead {
         position: fixed;
-        width: 100%;
     }
 }
 
